# udacity-ia-scholarship

./: .gitignore  README.md  config.template.yaml  main.py  pyproject.toml  show_img_thumbnail.py
manifest_table/: manifest.csv  manifest_validated.csv
step_1/: form_recognizers.py
step_2/: boarding_pass_model_inspection.py  form_recognizers.py  result_inspection.py
step_3/: README.md  video.py
step_4/: lighter_detector.py
step_5/: README.md
utils/: __init__.py
